Fix JWT permissions